--- a/package.json
+++ b/package.json
@@ -11,8 +11,15 @@
 		"lint:fix": "eslint src/**/*.{js,jsx,ts,tsx} --fix"
 	},
 	"dependencies": {
+		"@reduxjs/toolkit": "^2.2.7",
+		"axios": "^1.7.7",
+		"bootstrap": "^5.3.3",
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react-bootstrap": "^2.10.4",
+		"react-dom": "^18.2.0",
+		"react-redux": "^9.1.2",
+		"react-router-dom": "^6.26.2",
+		"redux": "^5.0.1"
 	},
 	"devDependencies": {
 		"@types/react": "^18.0.28",
