--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ dist-ssr
 *.local
 .eslintcache
 
-# Editor directories and files
+# Editor directories and nnnnnnnn
 .vscode/*
 !.vscode/extensions.json
 !.vscode/settings.json
